Refresh autogen products

--- a/cmd/zfs/Makefile.in
+++ b/cmd/zfs/Makefile.in
@@ -245,7 +245,7 @@ zfs_LDADD = \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
 
-zfs_LDFLAGS = -pthread -lm
+zfs_LDFLAGS = -pthread -lm -lz
 all: all-am
 
 .SUFFIXES:
