--- a/cmd/zdb/Makefile.am
+++ b/cmd/zdb/Makefile.am
@@ -13,8 +13,8 @@ DEFAULT_INCLUDES += \
 sbin_PROGRAMS = zdb
 
 zdb_SOURCES = \
-	zdb.c \
-	zdb_il.c
+	${top_srcdir}/cmd/zdb/zdb.c \
+	${top_srcdir}/cmd/zdb/zdb_il.c
 
 zdb_LDADD = \
 	$(top_builddir)/lib/libspl/libspl.la
