--- a/cmd/zdump/Makefile.am
+++ b/cmd/zdump/Makefile.am
@@ -6,7 +6,7 @@ DEFAULT_INCLUDES += \
 sbin_PROGRAMS = zdump
 
 zdump_SOURCES = \
-	zdump.c
+	${top_srcdir}/cmd/zdump/zdump.c
 
 zdump_LDADD = \
 	$(top_builddir)/lib/libspl/libspl.la
