--- a/cmd/Makefile.in
+++ b/cmd/Makefile.in
@@ -193,7 +193,7 @@ target_alias = @target_alias@
 target_cpu = @target_cpu@
 target_os = @target_os@
 target_vendor = @target_vendor@
-SUBDIRS = zfs zpool zpios # zdb zdump zinject ztest
+SUBDIRS = zfs zpool zdb zdump zinject ztest zpios
 all: all-recursive
 
 .SUFFIXES:
